in class exercises

--- a/schedule/week_1/web/web_exercise_3.html
+++ b/schedule/week_1/web/web_exercise_3.html
@@ -18,5 +18,10 @@
             <li>This is the second item in the same list.</li>
         </ul>
         <p>This is one last paragraph.</p>
+        <ol>
+            <li><a href="web_exercise_1.html">exercise 1</a></li>
+            <li><a href="web_exercise_2.html">exercise 2</a></li>
+            <li><a href="web_exercise_3.html">exercise 3</a></li>
+        </ol>
     </body>
 </html>
