--- a/schedule/week_1/web/web_exercise_1.html
+++ b/schedule/week_1/web/web_exercise_1.html
@@ -5,7 +5,7 @@
         <title>HTML exercise 1</title>
     </head>
     <body>
-        <h1>HTML exercise 1</h1>
+        <h1>HTML exercise 1 - in the branched repository</h1>
         <h2>This is a level 2 header, or subheading</h2>
         <p>This is a paragraph.</p>
         <p>This is another paragraph.</p>
@@ -14,5 +14,10 @@
             <li>This is the second item in the same list.</li>
         </ul>
         <p>This is one last paragraph.</p>
+        <ol>
+            <li><a href="web_exercise_1.html">exercise 1</a></li>
+            <li><a href="web_exercise_2.html">exercise 2</a></li>
+            <li><a href="web_exercise_3.html">exercise 3</a></li>
+        </ol>
     </body>
 </html>
